--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-plugin-emotion": "^4.1.12",
     "gatsby-plugin-feed": "^2.3.19",
     "gatsby-plugin-google-analytics": "^2.1.23",
-    "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^2.2.23",
     "gatsby-plugin-mdx": "^1.0.53",
     "gatsby-plugin-meta-redirect": "^1.1.1",
@@ -34,6 +34,7 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.32",
     "gatsby-plugin-typography": "^2.3.14",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.28",
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-prismjs": "^3.3.20",
@@ -51,10 +52,13 @@
     "react-live": "^2.2.1",
     "react-markdown": "^4.2.2",
     "react-share": "^3.0.1",
+    "react-slick": "^0.28.1",
     "react-typist": "^2.0.5",
     "react-typist-loop": "0.0.5",
     "react-typography": "^0.16.19",
+    "remark-unwrap-images": "^2.0.0",
     "serve": "^11.2.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^3.6.4",
     "typography": "^0.16.19",
     "yup": "^0.27.0"
