--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "gatsby-starter-egghead-blog",
-  "description": "This is a starter for egghead content creator blogs",
+  "name": "ittaboba",
+  "description": "Lorenzo Bernaschina's Website",
   "version": "1.0.0",
-  "author": "egghead.io <support@egghead.io> (https://egghead.io)",
-  "repository": "https://github.com/eggheadio/gatsby-starter-egghead-blog",
+  "author": "ittaboba.com <ittaboba@gmail.com> (https://ittaboba.com)",
   "dependencies": {
-    "@callstack/react-theme-provider": "^3.0.5",
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.22",
-    "@hot-loader/react-dom": "16.10.2",
+    "@callstack/react-theme-provider": "^2.1.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
-    "core-js": "^3.3.3",
+    "core-js": "^3.10.1",
     "dotenv": "^8.2.0",
-    "dotenv-parse-variables": "^0.2.3",
-    "emotion": "^10.0.17",
-    "emotion-server": "^10.0.17",
-    "emotion-theming": "^10.0.19",
-    "formik": "^1.5.8",
-    "gatsby": "^2.17.2",
-    "gatsby-cli": "^2.8.5",
-    "gatsby-image": "^2.2.29",
-    "gatsby-link": "^2.2.22",
-    "gatsby-plugin-catch-links": "^2.1.15",
-    "gatsby-plugin-emotion": "^4.1.12",
-    "gatsby-plugin-feed": "^2.3.19",
-    "gatsby-plugin-google-analytics": "^2.1.23",
+    "dotenv-parse-variables": "^2.0.0",
+    "emotion": "^11.0.0",
+    "emotion-server": "^11.0.0",
+    "emotion-theming": "^11.0.0",
+    "formik": "^2.2.6",
+    "gatsby": "^3.3.0",
+    "gatsby-cli": "^3.3.0",
+    "gatsby-image": "^3.3.0",
+    "gatsby-link": "^3.3.0",
+    "gatsby-plugin-catch-links": "^3.3.0",
+    "gatsby-plugin-emotion": "^6.3.0",
+    "gatsby-plugin-feed": "^3.3.0",
+    "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
-    "gatsby-plugin-manifest": "^2.2.23",
-    "gatsby-plugin-mdx": "^1.0.53",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-mdx": "^2.3.0",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-offline": "^3.0.16",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sharp": "^2.2.32",
-    "gatsby-plugin-typography": "^2.3.14",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-typography": "^3.3.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.1.28",
-    "gatsby-remark-images": "^3.1.28",
-    "gatsby-remark-prismjs": "^3.3.20",
-    "gatsby-source-filesystem": "^2.1.33",
-    "gatsby-transformer-remark": "^2.6.30",
-    "gatsby-transformer-sharp": "^2.3.0",
-    "polished": "^3.4.1",
+    "gatsby-remark-copy-linked-files": "^4.0.0",
+    "gatsby-remark-images": "^5.0.0",
+    "gatsby-remark-prismjs": "^5.0.0",
+    "gatsby-remark-responsive-iframe": "^4.0.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "polished": "^4.1.1",
     "prism-react-renderer": "^1.0.2",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.17.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-helmet": "~5.2.1",
-    "react-icons": "^3.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-live": "^2.2.1",
-    "react-markdown": "^4.2.2",
-    "react-share": "^3.0.1",
+    "react-markdown": "^5.0.3",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-typist": "^2.0.5",
     "react-typist-loop": "0.0.5",
@@ -59,13 +60,13 @@
     "remark-unwrap-images": "^2.0.0",
     "serve": "^11.2.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^3.6.4",
+    "typescript": "^4.2.4",
     "typography": "^0.16.19",
-    "yup": "^0.27.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "^0.2.20",
-    "prettier": "1.18.2"
+    "babel-preset-gatsby": "^1.3.0",
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
