--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ittaboba.com <ittaboba@gmail.com> (https://ittaboba.com)",
   "dependencies": {
     "@callstack/react-theme-provider": "^2.1.0",
-    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@hot-loader/react-dom": "^17.0.1",
@@ -16,7 +16,6 @@
     "dotenv-parse-variables": "^2.0.0",
     "emotion": "^11.0.0",
     "emotion-server": "^11.0.0",
-    "emotion-theming": "^11.0.0",
     "formik": "^2.2.6",
     "gatsby": "^3.3.0",
     "gatsby-cli": "^3.3.0",
