--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
+    "convertkit-react": "^1.5.5",
     "core-js": "^3.10.1",
     "dotenv-parse-variables": "^2.0.0",
     "emotion": "^11.0.0",
@@ -43,7 +44,7 @@
     "polished": "^4.1.1",
     "prism-react-renderer": "^1.0.2",
     "prism-themes": "^1.3.0",
-    "prismjs": "^1.17.1",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
